03.02.2019: Removed background color for menu toggler button             Aligned the toggler button to right for mobile devices             Changed the text display width for the navigation menu to 768px             Changed the rotation of the Analysis Chart to avoid label text overlapping each other,             added label and color to display moisture in the chart.

--- a/src/components/AnalysisChart/style.scss
+++ b/src/components/AnalysisChart/style.scss
@@ -1,4 +1,4 @@
 .chart  {
-    padding-bottom: 50px;
+    margin-bottom: 50px;
     
 }
