--- a/src/components/Navi/style.scss
+++ b/src/components/Navi/style.scss
@@ -5,8 +5,15 @@ img.logo {
 }
 
 .menu-icon{
-    font-size:1.5em;
+    font-size:1.8em;
 }
 .menu-button{
     float:center;
+    background-color:transparent;
+    border:none!important;
+    border: solid transparent;
+   
+    
+    
 }
+
