--- a/src/scss/gatstrap.scss
+++ b/src/scss/gatstrap.scss
@@ -14,7 +14,7 @@ $theme-colors: (
   secondary: $gray-600,
   success: $green,
   info: $cyan,
-  warning: $yellow,
+  warning: #8C2018,/*instead of $yellow standard */
   danger: $red,
   light: $gray-100,
   dark: $gray-800,
